files overflow fix

--- a/investimate_project/investimate_app/static/css/insight.css
+++ b/investimate_project/investimate_app/static/css/insight.css
@@ -40,6 +40,7 @@
 }
 
 #all-file-checkbox {
+    height: 65%;
     overflow: auto;
     flex: 1;
     display: flex;
